[package]
name = "rust-couter-tutorial"
version = "0.1.0"
authors = ["dingyi <dingyi@t2.world>",]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "3.1.0"

[profile.release]
codegen-units = 1
#
opt-level = "z"
lto = true
debug = false
panic = "abort"
#
overflow-checks = true
